--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,30 @@
 
 export(colorize)
 export(distinct_colors)
-export(do_community)
-export(do_enrichment)
 export(do_rwr)
-export(do_signature)
+export(enrich_communities)
+export(enrich_communities_interactive)
+export(enrich_communities_interactive_meta)
+export(enrich_communities_static)
+export(enrich_community)
+export(extend_signature)
+export(labelize_communities)
 export(normalize_range)
-import(dnet)
-import(hypeR)
-import(igraph)
+importFrom(dnet,dRWR)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,arrange)
+importFrom(dplyr,distinct)
+importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
+importFrom(dplyr,select)
+importFrom(hypeR,hypeR)
+importFrom(igraph,V)
+importFrom(igraph,as_data_frame)
+importFrom(igraph,graph_from_adjacency_matrix)
+importFrom(igraph,vcount)
+importFrom(igraph,vertex_attr_names)
+importFrom(tibble,deframe)
+importFrom(visNetwork,toVisNetworkData)
+importFrom(visNetwork,visEdges)
+importFrom(visNetwork,visNetwork)
+importFrom(visNetwork,visPhysics)
