Fixed Random Walk

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(enrich_community)
 export(extend_signature)
 export(labelize_communities)
 export(normalize_range)
-importFrom(dnet,dRWR)
+export(random_walk)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,distinct)
